<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.ValiderCommande">

    <RelativeLayout

        android:layout_width="900dp"
        android:layout_height="500dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/f15">


        <RelativeLayout
            android:layout_width="719dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="13dp"
            android:layout_marginTop="50dp"
            android:background="#BC191A1A">


            <TextView
                android:id="@+id/nom_plat_liste"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="center|start"
                android:text="@string/nom_plat"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/qte_selected"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/nom_plat_liste"
                android:layout_alignParentStart="true"
                android:layout_marginStart="242dp"
                android:layout_marginTop="-30dp"
                android:gravity="center"
                android:text="@string/quantity"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/portion_selected"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignTop="@+id/nom_plat_liste"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="258dp"
                android:gravity="center"
                android:text="@string/portion"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price_selected"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="121dp"
                android:gravity="center"
                android:text="@string/prix_plat"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/close_valider"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="11dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_close"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/valider_commande"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_layout"
            android:text="@string/valider"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:textColor="@color/rose_saumon" />


        <Button
            android:id="@+id/annuler_commande"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_layout"
            android:text="@string/annuler"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/rose_saumon" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/liste_commande"
            android:layout_width="761dp"
            android:layout_height="280dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="83dp"
            android:layout_marginTop="86dp"
            android:background="#052C2A2A" />

        <TextView
            android:id="@+id/repas"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="358dp"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/repas"
            android:textColor="@color/white"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/text_prix_total"
            android:layout_width="99dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="568dp"
            android:layout_marginBottom="96dp"
            android:gravity="center"
            android:text="@string/prix_total"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/prix_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="680dp"
            android:layout_marginBottom="99dp"
            android:gravity="center"
            android:text="@string/defaut"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />


    </RelativeLayout>


</RelativeLayout>