<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/dialog"
        android:layout_width="400dp"
        android:layout_height="255dp"
        android:background="@drawable/rounded_layout"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538">

        <Button
            android:id="@+id/confirmer_dialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:layout_alignParentBottom="true"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="-100dp"
            android:background="@drawable/rounded_button_green"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/confirmer_dialog"
            android:layout_marginBottom="13dp"
            android:gravity="center"
            android:text="@string/defaut"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/value"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="151dp"
            android:layout_marginBottom="21dp"
            android:text="@string/msg"
            android:textColor="@color/green"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/imageDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/ok" />

</android.support.constraint.ConstraintLayout>

